ignore some files

--- a/.gitignore
+++ b/.gitignore
@@ -1011,3 +1011,5 @@ Pods/Target Support Files/Pods-Coronavirus/Pods-Coronavirus.release.xcconfig
 Pods/Target Support Files/PromisesObjC/PromisesObjC-dummy.m
 Pods/Target Support Files/PromisesObjC/PromisesObjC.debug.xcconfig
 Pods/Target Support Files/PromisesObjC/PromisesObjC.release.xcconfig
+
+Coronavirus.xcworkspace/xcuserdata/mariuslazar.xcuserdatad/UserInterfaceState.xcuserstate
